--- a/package.json
+++ b/package.json
@@ -6,9 +6,8 @@
   "scripts": {
     "start": "cross-env NODE_ENV='production' node .",
     "dev": "cross-env NODE_ENV='development' nodemon .",
-    "seed-db": "nodemon ./initialData/initialDataService.js"
+    "seed-db": "cross-env NODE_ENV='development' nodemon ./initialData/initialDataService.js"
   },
-  "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
