--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,4 @@
 MONGO_URI="mongodb://127.0.0.1/nodeModule"
 JWT_SECRET="my secret key"
+ENVIRONMENT=development or production
+MONGO_DB_NAME=nodeModule
