--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,8 @@
 
 ### dotenv ###
 .env
-
+.env.development
+.env.production
 ### Git ###
 # Created by git for backups. To disable backups in Git:
 # $ git config --global mergetool.keepBackup false
